--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
           </ul>
         </nav>
         <h1 class="header__title">
-          <span class="header__span-accent">Café especial</span> na biblioteca
+          <span class="header__span-accent">Café especial</span>
+          <br>na biblioteca
           Triple Peaks
         </h1>
 
