--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h1 class="header__title">
           <span class="header__span-accent">Café especial</span>
           <br>na biblioteca
-          Triple Peaks
+          <br>Triple Peaks
         </h1>
 
         <p class="header__description">
